--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "date-fns-tz": "^3.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
